Import of BRONTO/Net-LDAP-Express-0.12 from CPAN.
gitpan-cpan-distribution: Net-LDAP-Express
gitpan-cpan-version:      0.12
gitpan-cpan-path:         BRONTO/Net-LDAP-Express-0.12.tar.gz
gitpan-cpan-author:       BRONTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,23 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Net-LDAP-Express
-version:      0.11
-version_from: Express.pm
-installdirs:  site
+---
+abstract: 'Simplified interface for Net::LDAP'
+author:
+  - 'Marco Marongiu <bronto@cpan.org>'
+build_requires:
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
+license: unknown
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-LDAP-Express
+no_index:
+  directory:
+    - t
+    - inc
 requires:
-    Net::LDAP:                     0.23
-    Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+  Net::LDAP: 0.23
+  Test::More: 0
+version: 0.12
